--- a/doc-V2V_Guide/cfme/doc/asm_Discovery.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Discovery.adoc
@@ -1,5 +1,5 @@
 [[Discovery]]
-== Discovery
+= Discovery
 
 You can use CloudForms to discover your infrastructure providers.
 
@@ -16,7 +16,7 @@ The discovery procedure has 3 key stages:
 * Authenticate Red Hat Virtualization Manager and hosts.
 * Authenticate VMware vCenter and hosts.
 
-include::modules/proc_Discovering_infrastructure_providers.adoc[]
-include::modules/proc_Authenticating_RHV_Manager_and_hosts.adoc[]
-include::modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc[]
+include::modules/proc_Discovering_infrastructure_providers.adoc[leveloffset=+1]
+include::modules/proc_Authenticating_RHV_Manager_and_hosts.adoc[leveloffset=+1]
+include::modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc[leveloffset=+1]
 
