--- a/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Migration.adoc
@@ -6,7 +6,7 @@ TBD:
 * How long will the migration take?
 * How to estimate remaining migration time
 
-include::modules/proc_Creating_a_Conversion_Host.adoc[]
-include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[]
-include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[]
+include::modules/proc_Creating_a_Conversion_Host.adoc[leveloffset=+1]
+include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
+include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
 
