--- a/doc-V2V_Guide/cfme/doc/asm_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Planning.adoc
@@ -1,5 +1,5 @@
 [[Planning]]
-== Planning
+= Planning
 
 A well-planned migration is critical for success. TBD
 
@@ -9,14 +9,14 @@ The planning process has x key stages:
 * Create migration groups.
 * Create a schedule.
 
-=== Creating Playbooks for Pre- and Post-migration Tasks
+== Creating Playbooks for Pre- and Post-migration Tasks
 
 Create Ansible playbooks for pre-migration tasks:
 
 * Task 1
 * Task 2
 
-=== Creating Migration Groups
+== Creating Migration Groups
 
 Virtual Machines:
 
@@ -35,7 +35,7 @@ Best practices:
 * Plan for redundancy
 * Stagger migration schedules
 
-=== Creating a Schedule
+== Creating a Schedule
 
 * How do I schedule the migration?
 * What downtime can I anticipate?
