--- a/doc-V2V_Guide/cfme/doc/asm_Post-migration.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Post-migration.adoc
@@ -1,5 +1,5 @@
 [[Post-migration]]
-== Post-migration
+= Post-migration
 
 *(%AP: How many of these tasks can be automated? If so, refer from Planning > Creating Playbooks)*
 
