--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_NFS_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_NFS_Storage.adoc
@@ -1,12 +1,12 @@
 [[Adding_NFS_Storage]]
-==== Adding NFS Storage
+= Adding NFS Storage
 
 NFS versions 3 and 4 are supported by Red Hat Virtualization 4. Production workloads require an enterprise-grade NFS server. When enterprise NFS is deployed over 10 GbE, segregated with VLANs, and individual services are configured to use specific ports, it is both fast and secure.
 
 As NFS exports are grown to accommodate more storage needs, Red Hat Virtualization recognizes the larger data store immediately. No additional configuration is necessary on the hosts or from within Red Hat Virtualization. This provides NFS a slight edge over block storage from a scale and operational perspective.
 
 [discrete]
-===== Preparing NFS Storage
+= Preparing NFS Storage
 
 NFS shares serve as a data domain on a Red Hat Enterprise Linux server. A data domain holds the virtual hard disks and OVF files of all the virtual machines and templates in a data center. In addition, snapshots of the virtual machines are stored in the data domain. The data domain cannot be shared across data centers. Data domains of multiple types (iSCSI, NFS, FC, POSIX, and Gluster) can be added to the same data center, provided they are all shared, rather than local, domains.
 
@@ -41,7 +41,7 @@ Create the system user accounts and groups required by the Manager:
 ----
 
 [discrete]
-===== Attaching NFS Storage
+= Attaching NFS Storage
 
 Attach the NFS storage domain to the data center in your Red Hat Virtualization environment. This storage domain provides storage for virtual disks and and ISO boot media. This procedure assumes that you have already exported shares.
 
