--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_VMware_vCenter_and_hosts.adoc
@@ -1,5 +1,5 @@
 [[Authenticating_VMware_vCenter]]
-=== Authenticating VMware vCenter and Hosts
+= Authenticating VMware vCenter and Hosts
 
 Authenticate vCenter so that CloudForms can connect to it:
 
