--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -1,5 +1,5 @@
 [[Configuring-cloudforms]]
-=== Configuring the CloudForms Database
+= Configuring the CloudForms Database
 
 After installing CloudForms and running it for the first time, configure the internal database in which CloudForms stores information about the environment:
 
