--- a/doc-V2V_Guide/cfme/doc/modules/proc_Connecting_to_the_Administration_Portal.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Connecting_to_the_Administration_Portal.adoc
@@ -1,6 +1,6 @@
 [[Connecting_to_the_Administration_Portal]]
 [discrete]
-==== Connecting to the Administration Portal
+= Connecting to the Administration Portal
 
 Access the Administration Portal using a web browser:
 
