--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_a_Conversion_Host.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_a_Conversion_Host.adoc
@@ -1,5 +1,5 @@
 [[Creating_a_Conversion_Host]]
-=== Creating a Conversion Host
+= Creating a Conversion Host
 
 Configure a Red Hat Virtualization Host as a conversion host:
 
