--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,5 +1,5 @@
 [[Creating_an_Infrastructure_Mapping]]
-=== Creating an Infrastructure Mapping
+= Creating an Infrastructure Mapping
 
 Create an infrastructure mapping to map your VMware resources to Red Hat Virtualization resources:
 
