--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,5 +1,5 @@
 [[Creating_a_Migration_Plan]]
-=== Creating and Running a Migration Plan
+= Creating and Running a Migration Plan
 
 Create and run a migration plan:
 
