--- a/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Discovering_infrastructure_providers.adoc
@@ -1,5 +1,5 @@
 [[Discovering_infrastructure_providers]]
-=== Discovering Infrastructure Providers
+= Discovering Infrastructure Providers
 
 Discover your infrastructure providers in a defined subnet range:
 
