--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -1,5 +1,5 @@
 [[Installing_Red_Hat_Virtualization_Manager]]
-=== Installing Red Hat Virtualization Manager
+= Installing Red Hat Virtualization Manager
 
 The procedure for installing Red Hat Virtualization Manager has 5 key stages:
 
@@ -15,7 +15,7 @@ These procedures describe how to set up a basic Red Hat Virtualization environme
 ====
 
 [discrete]
-==== Prerequisites
+= Prerequisites
 
 Your system must meet the following minimum requirements to install the Red Hat Virtualization Manager:
 
@@ -34,7 +34,7 @@ Do not enable additional repositories. The required repositories are specified i
 
 [[Enabling_the_Manager_Repositories]]
 [discrete]
-==== Enabling the Manager Repositories
+= Enabling the Manager Repositories
 
 To install the Red Hat Virtualization packages, you must register the system with Red Hat Subscription Manager, attach the `Red Hat Enterprise Linux Server` and `Red Hat Virtualization` subscriptions, and enable the Manager repositories:
 
@@ -93,7 +93,7 @@ To list all enabled repositories, run:
 ----
 
 [discrete]
-==== Installing the Manager Packages
+= Installing the Manager Packages
 
 . Update all packages on the machine where you are installing the Red Hat Virtualization Manager: 
 +
@@ -115,7 +115,7 @@ Reboot the machine if any kernel-related packages have been updated. *(%AP: Why 
 ----
 
 [discrete]
-==== Configuring the Manager
+= Configuring the Manager
 
 The `engine-setup` command asks you a series of configuration questions, applies that configuration, and starts the `ovirt-engine` service. `engine-setup` also creates and configures the Engine and Data Warehouse databases.
 
