--- a/doc-V2V_Guide/cfme/doc/modules/proc_Logging_in_to_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Logging_in_to_CloudForms.adoc
@@ -1,6 +1,6 @@
 [[Logging_in_to_CloudForms]]
 [discrete]
-==== Logging in to CloudForms
+= Logging in to CloudForms
 
 Once CloudForms is installed, you can log in and perform administration tasks.
 
@@ -11,7 +11,7 @@ Log in to CloudForms after installation:
 .  Click *Login*.
 
 [discrete]
-==== Changing CloudForms Password
+= Changing CloudForms Password
 
 Change your password for security:
 
