--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -14,11 +14,11 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 include::doc/con_Introduction.adoc[]
-include::doc/asm_Installation.adoc[]
-include::doc/asm_Discovery.adoc[]
-include::doc/asm_Planning.adoc[]
-include::doc/asm_Migration.adoc[]
-include::doc/asm_Post-migration.adoc[]
+include::doc/asm_Installation.adoc[leveloffset=+1]
+include::doc/asm_Discovery.adoc[leveloffset=+1]
+include::doc/asm_Planning.adoc[leveloffset=+1]
+include::doc/asm_Migration.adoc[leveloffset=+1]
+include::doc/asm_Post-migration.adoc[leveloffset=+1]
 
 
 
