--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_a_host_to_the_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_a_host_to_the_Manager.adoc
@@ -1,5 +1,5 @@
 [[Adding_a_host_to_the_Manager]]
-=== Adding a Host to the Red Hat Virtualization Manager
+= Adding a Host to the Red Hat Virtualization Manager
 
 [NOTE]
 ====
