--- a/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Storage.adoc
@@ -1,5 +1,5 @@
 [[Storage]]
-=== Adding Storage
+= Adding Storage
 
 You must attach at least one storage domain to each data center. Setting up storage is a prerequisite for a new data center because a data center cannot be initialized unless storage domains are attached and activated. A storage domain can be made of either block devices (iSCSI or Fibre Channel) or a file system.
 
@@ -25,15 +25,15 @@ For more information about storage, see:
 
 * link:https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/7/html/Storage_Administration_Guide/index.html[_Red Hat Enterprise Linux Storage Administration Guide_].
 
-include::proc_Adding_NFS_Storage.adoc[]
+include::proc_Adding_NFS_Storage.adoc[leveloffset=+1]
 
-==== Adding Other Storage
+== Adding Other Storage
 
 This section describes other forms of storage that are supported by Red Hat Virtualization.
 
 [[iSCSI]]
 [discrete]
-==== iSCSI
+= iSCSI
 
 Production workloads require an enterprise-grade iSCSI server. When enterprise iSCSI is deployed over 10 GbE, segregated with VLANs, and with CHAP authentication, it is both fast and secure. iSCSI can also use multipathing to improve high availability.
 
@@ -49,7 +49,7 @@ include::ref_Storage_to_CF_link.adoc[]
 
 [[fc]]
 [discrete]
-==== Fibre Channel
+= Fibre Channel
 
 Fibre Channel is both fast and secure, and should be taken advantage of if it is already used in the target data center. It also has the advantage of low CPU overhead, compared to iSCSI and NFS. Fibre Channel can also use multipathing to improve high availability.
 
@@ -65,7 +65,7 @@ include::ref_Storage_to_CF_link.adoc[]
 
 [[FCoE]]
 [discrete]
-==== Fibre Channel over Ethernet
+= Fibre Channel over Ethernet
 
 To use Fibre Channel over Ethernet (FCoE) in Red Hat Virtualization, you must enable the *fcoe* key on the Manager, and install the _vdsm-hook-fcoe_ package on the hosts. 
 
@@ -81,7 +81,7 @@ include::ref_Storage_to_CF_link.adoc[]
 
 [[Gluster]]
 [discrete]
-==== Red Hat Gluster Storage
+= Red Hat Gluster Storage
 
 Red Hat Gluster Storage (RHGS) is a POSIX-compliant, open-source file system. Three or more servers are configured as a Red Hat Gluster Storage cluster, instead of network-attached storage (NAS) appliances or a storage area network (SAN) array.
 
@@ -99,7 +99,7 @@ include::ref_Storage_to_CF_link.adoc[]
 
 [[Ceph]]
 [discrete]
-==== Red Hat Ceph File System
+= Red Hat Ceph File System
 
 Red Hat Ceph File System (CephFS) is a file system compatible with POSIX standards that uses a Ceph Storage Cluster to store its data. No special configuration is required on the Red Hat Virtualization side when adding CephFS as a storage domain. It is added the same way as any other POSIX-compliant FS storage. 
 
@@ -109,7 +109,7 @@ include::ref_Storage_to_CF_link.adoc[]
 
 [[POSIX]]
 [discrete]
-==== POSIX-Compliant FS
+= POSIX-Compliant FS
 
 Other POSIX-compliant file systems can be used as storage domains in Red Hat Virtualization, as long as they are clustered file systems, such as Red Hat Global File System 2 (GFS2), and support sparse files and direct I/O. The Common Internet File System (CIFS), for example, does not support direct I/O, making it incompatible with Red Hat Virtualization. 
 
@@ -123,7 +123,7 @@ include::ref_Storage_to_CF_link.adoc[]
 
 [[local]]
 [discrete]
-==== Local Storage
+= Local Storage
 
 Local storage is set up on an individual host, using the host's own resources. When you set up a host to use local storage, it is automatically added to a new data center and cluster that no other hosts can be added to. Virtual machines created in a single-host cluster cannot be migrated, fenced, or scheduled.
 
