--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -403,6 +403,10 @@ Templates use a human-readable syntax and can be defined in text files, thereby 
 When importing a template into {product-title_short}, the selected elements are converted according to their type. For example, lists convert to list boxes, and single items convert to text boxes.
 ====
 
+ifdef::cfme[]
+See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/service_provisioning_in_cloudforms_using_an_orchestration_template[Service Provisioning in CloudForms Using an Orchestration Template] for an example about creating a service in CloudForms for provisioning virtual machine instances using an AWS CloudFormation orchestration template. 
+endif::cfme[]
+
 [[adding-orchestration-template]]
 ==== Creating an Orchestration Template
 
