Fixed some levels

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Host.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Host.adoc
@@ -14,7 +14,7 @@ The procedure for installing RHVH on a physical machine has 3 key stages:
 * Install the RHVH minimal operating system.
 
 [discrete]
-= Prerequisites
+== Prerequisites
 
 Your host machine must meet the following minimum requirements to install RHVH:
 
@@ -27,7 +27,7 @@ Your host machine must meet the following minimum requirements to install RHVH:
 * Network Interface Card (NIC) - Minimum: At least 1 NIC, with at least 1 Gbps. Red Hat recommends that each host have two network interfaces, with one dedicated to supporting network-intensive activities such as virtual machine migration. The performance of such operations is limited by the bandwidth available.
 
 [discrete]
-= Installing Red Hat Virtualization Host
+== Installing Red Hat Virtualization Host
 
 . Download the RHVH ISO image from the Customer Portal:
 .. Log in to the Customer Portal at link:https://access.redhat.com[].
