--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
@@ -1,29 +1,7 @@
-// Module included in the following assemblies:
-//
-// asm_Installation.adoc
-
-// This module can be included from assemblies using the following include statement:
-// include::<path>/proc_Installing_cloudforms_automatically.adoc[leveloffset=+1]
-
-// The file name and the ID are based on the module title. For example:
-// * file name: proc_doing-procedure-a.adoc
-// * ID: [id='proc_doing-procedure-a_{context}']
-// * Title: = Doing procedure A
-//
-// The ID is used as an anchor for linking to the module. Avoid changing
-// it after the module has been published to ensure existing links are not
-// broken.
-//
-// The `context` attribute enables module reuse. Every module's ID includes
-// {context}, which ensures that the module has a unique ID even if it is
-// reused multiple times in a guide.
-//
-// Start the title with a verb, such as Creating or Create. See also
-// _Wording of headings_ in _The IBM Style Guide_.
 [id="proc_Installing_cloudforms_automatically_{context}"]
 = Installing CloudForms Automatically
 
-This paragraph is the procedure module introduction: a short description of the procedure.
+The CloudForms installation is automated with an oVirt Ansible role, `oVirt.manageiq`.
 
 [discrete]
 == Prerequisites
@@ -35,9 +13,10 @@ This paragraph is the procedure module introduction: a short description of the 
 [discrete]
 == Procedure
 
-. Start each step with an active verb.
+. Go to the ??? directory.
 
-. Include one command or action per step.
+. Run the playbook:
+
 
 . Use an unnumbered bullet (*) if the procedure includes only one step.
 
