--- a/doc-V2V_Guide/cfme/doc/asm_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/asm_Installation.adoc
@@ -1,16 +1,15 @@
 = Installation
 
-Before migrating your VMware system, you must install Red Hat Virtualization Manager, Red Hat Virtualization Hosts, and Red Hat CloudForms.
+Before migrating your VMware system, you must install Red Hat Virtualization Manager (4.2.4 or later), Red Hat Virtualization Hosts (4.2.4 or later), and Red Hat CloudForms (4.6.4 or later).
 
 include::modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc[leveloffset=+1]
-include::modules/proc_Connecting_to_the_Administration_Portal.adoc[leveloffset=+1]
+include::modules/proc_Connecting_to_the_Administration_Portal.adoc[leveloffset=+2]
 include::modules/proc_Installing_Red_Hat_Virtualization_Host.adoc[leveloffset=+1]
 include::modules/proc_Adding_a_host_to_the_Manager.adoc[leveloffset=+1]
 
 include::modules/ref_Storage.adoc[leveloffset=+1]
 
 include::modules/proc_Installing_CloudForms.adoc[leveloffset=+1]
-
 include::modules/proc_Configuring_CloudForms.adoc[leveloffset=+1]
 include::modules/proc_Logging_in_to_CloudForms.adoc[leveloffset=+1]
 
