resolved some comments.

--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -9,7 +9,7 @@
 [[Introduction]]
 == Introduction
 
-{product-title} is Red Hat's infrastructure migration solution for moving your virtual machines from VMware to Red Hat Virtualization. This solution is intended for VMware systems with more than 200 hosts (hypervisors) and more than 2000 virtual machines. By moving from VMware to Red Hat Virtualization, you reduce costs, ...  [To be expanded]
+{product-title} is Red Hat's infrastructure migration solution for moving your virtual machines from VMware to Red Hat Virtualization. This solution is intended for VMware systems with more than 200 hosts (hypervisors) and more than 2000 virtual machines. By moving from VMware to Red Hat Virtualization, you can reduce licensing costs and dependence on proprietary virtualization, while investing in transformative technologies such as multi-cloud management, automation, and containers.
 
 Red Hat Virtualization is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. Virtualization allows users to easily provision new virtual servers and workstations, and provides more efficient use of physical server resources. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
