--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_other_storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_other_storage.adoc
@@ -1,7 +1,15 @@
 //[id="proc_Adding_other_storage_{context}"]
 = Adding Other Storage
 
-This section describes other forms of storage that are supported by Red Hat Virtualization.
+This section describes other forms of storage that are supported by Red Hat Virtualization:
+
+* xref:iSCSI[iSCSI]
+* xref:fc[Fibre Channel]
+* xref:FCoE[Fibre Channel over Ethernet]
+* xref:Gluster[Red Hat Gluster Storage]
+* xref:Ceph[Red Hat Ceph File System]
+* xref:POSIX[POSIX-Compliant FS]
+* xref:local[Local Storage]
 
 [[iSCSI]]
 [discrete]
