--- a/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Authenticating_RHV_Manager_and_hosts.adoc
@@ -4,8 +4,7 @@
 Authenticate the Manager so that CloudForms can connect to it:
 
 . Go to menu:Compute[Infrastructure > Providers].
-. Select the *Zone* for the provider. *(%AP: This was not selectable when I tried)*
-. In the *Credentials* area, under *Default*, enter the user name (formatted as `admin@internal`) in the *Username* field. *(%AP: Login for test environment succeeded only when certificate check was disabled. OK to assume that certificate check should be enabled in production?)*
+. In the *Credentials* area, under *Default*, enter the user name (formatted as `admin@internal`) in the *Username* field.
 . Enter the password in the *Password* field.
 . Confirm the password in the *Confirm Password* field.
 . Click *Validate*.
