--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Host.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Host.adoc
@@ -1,7 +1,7 @@
 [[Installing_RHVH]]
 = Installing Red Hat Virtualization Host
 
-You must install at least one host to function as a conversion host during the migration. *(%AP: How many hosts should they install? 1 for conversion, 1 for CF? More?)*
+You must install at least one host to function as a conversion host during the migration. Ensure that your hosts are sufficient to cover the memory and CPU requirements of the virtual machines that you are migrating.
 
 Red Hat Virtualization Host (RHVH) is a minimal operating system, based on Red Hat Enterprise Linux, that is designed to provide a simple method for setting up a physical machine to act as a hypervisor in a Red Hat Virtualization environment. The minimal operating system contains only the packages required for the machine to act as a hypervisor, and features a Cockpit user interface for monitoring the host and performing administrative tasks.
 
