--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_Red_Hat_Virtualization_Manager.adoc
@@ -101,12 +101,9 @@ To list all enabled repositories, run:
 ----
 # yum update
 ----
-+
-[NOTE]
-====
-Reboot the machine if any kernel-related packages have been updated. *(%AP: Why don't we just tell them to reboot instead of making it optional? There are almost always kernel-related packages that are updated.)*
-====
-+
+
+. Reboot the machine.
+
 . Install the `rhvm` package and dependencies:
 +
 [options="nowrap" subs="+quotes,verbatim"]
