--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -4,12 +4,12 @@
 After installing CloudForms and running it for the first time, configure the internal database in which CloudForms stores information about the environment:
 
 . Start the appliance and open a terminal console.
-. Log in as `root`, with the default password of `smartvm`.
+. Log in as `root`, with the default password, `smartvm`.
 . Enter the `appliance_console` command. The CloudForms appliance summary screen is displayed.
 . Press *Enter* to manually configure settings.
-. Select *5) Configure Database* from the menu.
-. Select *1) Create key*.
-. Select *1) Create Internal Database* for the database location.
+. Select `5) Configure Database` from the menu.
+. Select `1) Create key`.
+. Select `1) Create Internal Database` for the database location.
 . Choose a disk for the database. This can be either a disk you attached previously, or a partition on the current disk.
 +
 [IMPORTANT]
@@ -24,8 +24,8 @@ If there is an unpartitioned disk attached to the virtual machine, the dialog wi
 2) Don't partition the disk 
 ----
 +
-* Enter *1* to choose `/dev/vdb` for the database location. This option creates a logical volume using this device and mounts the volume to the appliance in a location appropriate for storing the database. The default location is `/var/opt/rh/rh-postgresql95/lib/pgsql`, which can be found in the environment variable `$APPLIANCE_PG_MOUNT_POINT`.
-. Enter *Y* for *Should this appliance run as a standalone database server?*
+* Enter `1` to choose `/dev/vdb` for the database location. This option creates a logical volume using this device and mounts the volume to the appliance in a location appropriate for storing the database. The default location is `/var/opt/rh/rh-postgresql95/lib/pgsql`, which can be found in the environment variable `$APPLIANCE_PG_MOUNT_POINT`.
+. Enter `Y` for *Should this appliance run as a standalone database server?*
 . Create and confirm a password for the database.
 +
 CloudForms configures the internal database.
