--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_NFS_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_NFS_Storage.adoc
@@ -6,42 +6,75 @@ NFS versions 3 and 4 are supported by Red Hat Virtualization 4. Production workl
 As NFS exports are grown to accommodate more storage needs, Red Hat Virtualization recognizes the larger data store immediately. No additional configuration is necessary on the hosts or from within Red Hat Virtualization. This provides NFS a slight edge over block storage from a scale and operational perspective.
 
 [discrete]
-= Preparing NFS Storage
+== Prerequisites
+
+* *nfs-utils* installed.
+
+* The following services installed and enabled:
+
+** *nfs*: `systemctl start nfs` starts the NFS server and the appropriate RPC processes to service requests for shared NFS file systems.
+** *nfs-lock*: `systemctl start nfs-lock` activates a mandatory service that starts the appropriate RPC processes allowing NFS clients to lock files on the server. 
+** *rpcbind*: `rpcbind` accepts port reservations from local RPC services. These ports are then made available (or advertised) so the corresponding remote RPC services can access them. `rpcbind` responds to requests for RPC services and sets up connections to the requested RPC service. This is not used with NFSv4.
+
+[discrete]
+== Preparing NFS Storage
 
 NFS shares serve as a data domain on a Red Hat Enterprise Linux server. A data domain holds the virtual hard disks and OVF files of all the virtual machines and templates in a data center. In addition, snapshots of the virtual machines are stored in the data domain. The data domain cannot be shared across data centers. Data domains of multiple types (iSCSI, NFS, FC, POSIX, and Gluster) can be added to the same data center, provided they are all shared, rather than local, domains.
 
-Create the system user accounts and groups required by the Manager:
+. Create the data directory:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# mkdir -p _/exports/data_
+----
+
+. Add the newly created directories to the /etc/exports file:
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+_/exports/data_ *(rw)
+----
+
+. Export the storage domains:
++
+----
+# exportfs -r
+----
+
+. Reload the NFS service:
++
+----
+# exportfs -r
+----
 
 . Create the group `kvm`: 
 +
-[options="nowrap" subs="+quotes,verbatim"]
 ----
 # groupadd kvm -g 36
 ----
-+
+
 . Create the user `vdsm` in the group `kvm`: 
 +
-[options="nowrap" subs="+quotes,verbatim"]
 ----
 # useradd vdsm -u 36 -g 36
 ----
+
+. Set the ownership of your exported directories to 36:36, which gives vdsm:kvm ownership:
 +
-. Set the ownership of your exported *(%AP: We don't mention exporting or mounting NFS before this step. Should we add it?)* directories to 36:36, which gives vdsm:kvm ownership:
-+			
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # chown -R 36:36 _/exports/data_
 ----
-+
+
 . Change the mode of the directories so that read and write access is granted to the owner, and so that read and execute access is granted to the group and other users:
-+			
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # chmod 0755 _/exports/data_
 ----
 
 [discrete]
-= Attaching NFS Storage
+== Attaching NFS Storage
 
 Attach the NFS storage domain to the data center in your Red Hat Virtualization environment. This storage domain provides storage for virtual disks and and ISO boot media. This procedure assumes that you have already exported shares.
 
