applied peer review suggestions from PR#870

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/configuring_external_auth_ocp.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/configuring_external_auth_ocp.adoc
@@ -106,7 +106,7 @@ $ httpd_configmap_generator update \
 --output=/tmp/updated-auth-configmap.yaml
 ----
 
-When downloading a file by URL, a target file path and file ownership/mode must be specified.
+When downloading a file by URL, a target file path and file ownership and mode must be specified.
 
 
 ==== Exporting a File from an `authconfig` Map
@@ -136,7 +136,7 @@ Two templates are required to run the `httpd-configmap-generator` application (`
 $ oc import-image my-cloudforms46/cfme-httpd-configmap-generator --from=registry.access.redhat.com/cloudforms46/cfme-httpd-configmap-generator --confirm
 ----
 +
-. The `httpd-configmap-generator` service account must be added to the `httpd-scc-sysadmin` SCC before the `httpd-configmap-generator` can run. To edit the SCC, log in to OpenShift as an admin user: 
+. The `httpd-configmap-generator` service account must be added to the `httpd-scc-sysadmin` security context constraints (SCC) before the `httpd-configmap-generator` can run. To edit the SCC, log in to OpenShift as an admin user: 
 +
 ----
 $ oc login -u <user> -p <password>
