--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on OpenShift Container Platform
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :experimental:
@@ -14,8 +14,12 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 
+
 [[Installation]]
 include::topics/installation.adoc[]
+
+[[External-Authentication-Configuration]]
+include::topics/configuring_external_auth_ocp.adoc[]
 
 // [[Additional_Configuration]]
 // include::topics/additional_configuration.adoc[]
@@ -25,4 +29,12 @@ include::topics/post-installation.adoc[]
 
 [[Troubleshooting]]
 include::topics/troubleshooting.adoc[]
+
+
+[[appendix]]
+== Appendix
+
+[[saml-authentication-example]]
+include::topics/appe-saml-authentication-example.adoc[]
+
 
