--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_NFS_Storage.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_NFS_Storage.adoc
@@ -19,7 +19,7 @@ As NFS exports are grown to accommodate more storage needs, Red Hat Virtualizati
 [discrete]
 == Preparing NFS Storage
 
-NFS shares serve as a data domain on a Red Hat Enterprise Linux server. A data domain holds the virtual hard disks and OVF files of all the virtual machines and templates in a data center. In addition, snapshots of the virtual machines are stored in the data domain. The data domain cannot be shared across data centers. Data domains of multiple types (iSCSI, NFS, FC, POSIX, and Gluster) can be added to the same data center, provided they are all shared, rather than local, domains.
+NFS shares serve as a data domain on a Red Hat Enterprise Linux server. A data domain holds the virtual hard disks and OVF files of all the virtual machines and templates in a data center. In addition, snapshots of the virtual machines are stored in the data domain. The data domain cannot be shared across data centers. Data domains of multiple types (iSCSI, NFS, FC, POSIX, and Gluster) can be added to the same data center, provided they are all shared, rather than local, domains. *(%AP: In progress. Not quite sure about this because it doesn't mention mounting the NFS storage on mount point on host machine.)*
 
 . Create the data directory:
 +
