--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -23,6 +23,7 @@ The infrastructure migration has 5 key stages:
 * Migration
 * Post-migration
 
-Future stuff to put in: How long will migration take for x number of VMs?
-How many machines do they need?
+*(%AP: How long will migration take for x number of VMs? How many machines do they need?)*
+
+TBD: Diagram from https://github.com/RedHatDemos/RHS-Optimize_IT-Infrastructure_Migration/blob/master/docs/00-redhat_solutions-insfrastructure_migration_v2-deployment.adoc#vm-migration-workflow to be inserted here.
 
